# final_project_SDR

./: CMakeLists.txt  MANIFEST.md  build.sh
.conda/: README.md
.conda/recipe/: meta.yaml
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-ori_omerConfig.cmake
docs/: CMakeLists.txt  README.ori_omer
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
flow_graphs/: Rx_USRP.grc  Tx_USRP.grc  Tx_USRP.py  draft.py  ex_a.grc  ex_a.py  ex_b.grc  ex_b.py  ex_c.grc  ex_c.py  script.py  temp.py  temp_output.txt
grc/: CMakeLists.txt  ori_omer_demodulated_b.block.yml  ori_omer_modulate_a.block.yml
include/gnuradio/ori_omer/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/ori_omer/: CMakeLists.txt  __init__.py  demodulated_b.py  draft.py  modulate_a.py  temp.py
python/ori_omer/bindings/: CMakeLists.txt  python_bindings.cc
